--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     hibernate:
       ddl-auto: update
   datasource:
-    url: jdbc:mysql://localhost:3306/learn-english
+    url: jdbc:mysql://localhost:3306/kien-truc-phan-mem
     username: root
     password: 123456
     driver-class-name: com.mysql.cj.jdbc.Driver
