--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,9 @@
     "i": "^0.3.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-redux": "^9.1.2",
+    "react-toastify": "^8.1.0",
     "redux": "^5.0.1"
   },
   "devDependencies": {
