--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -82,6 +82,11 @@
 			<version>9.2.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-webflux</artifactId>
+		</dependency>
+
 
 	</dependencies>
 
