--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
       ddl-auto: update
 
   datasource:
-    url: jdbc:mysql://localhost:3306/kien-truc-phan-mem
+    url: jdbc:mysql://localhost:3306/db_tttn
     username: root
     password: 123456
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -36,13 +36,5 @@ spring:
 system:
   version: "api/v1"
 
-payment:
-  vnPay:
-    url: ${PAY_URL}
-    tmnCode: ${TMN_CODE}
-    secretKey: ${SECRET_KEY}
-    returnUrl: ${RETURN_URL}
-    version: ${VERSION}
-    command: ${COMMAND}
-    orderType: ${ORDER_TYPE}
+
 
